[package]
name = "csgo-crawler"
version = "0.1.5"
authors = ["Kirovj <wuyitingtz3@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusqlite = { version = "0.26.0", features = ["bundled"] }
reqwest = { version = "0.11", features = ["blocking", "json"] }
clap = "2.34.0"
serde_json = "1.0"
lazy_static = "1.4.0"
rand = "0.8.4"
regex = "1.5.4"
chrono = "0.4.19"