[package]
name = "csgo-item-price"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusqlite = { version = "0.26.0", features = ["bundled"] }
ureq = "2.4.0"
serde_json = "1.0"
lazy_static = "1.4.0"
rand = "0.8.4"
chrono = "0.4.19"
axum = "0.4.8"
tokio = { version = "1.0", features = ["full"] }