[package]
name = "rscsgo"
version = "0.3.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusqlite = { version = "0.27.0", features = ["bundled"] }
ureq = "2.4.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
rand = "0.8.4"
chrono = "0.4.19"
axum = "0.5.3"
tower-http = { version = "0.2.5", features = ["fs"] }
tokio = { version = "1.0", features = ["full"] }