[package]
name = "crawler"
version = "0.1.6"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusqlite = { version = "0.26.0", features = ["bundled"] }
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde_json = "1.0"
lazy_static = "1.4.0"
rand = "0.8.4"
chrono = "0.4.19"